home page full base

--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -1,6 +1,6 @@
 <!-- app/templates/start.html -->
 
-{% extends "base.html" %}
+{% extends "base_full.html" %}
 
 {% block title %}Inicio{% endblock %}
 
