--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -233,7 +233,7 @@ footer .footer-column a:hover {
       <!-- Main Content -->
       <div class="col" id="main-content">
 
-        <div class="container mt-5"> <!-- content -->
+        <div class="container _mt-5"> <!-- content -->
             {% include 'inc/flashmsg.html' %}
            
             {% block content %}
