--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -14,7 +14,7 @@
 
           /* Jumbotron Full Page */
         .jumbotron {
-            height: 100vh;
+            /* height: 100vh; */
             display: flex;
             align-items: center;
             justify-content: space-between;
