minor fix jumok

--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -1,5 +1,5 @@
     <!-- Jumbotron -->
-    <header class="jumbotron">
+    <header class="jumbotron mb-5">
         <div class="jumbotron-content">
             <h1 class="display-3">Toma el Control de tu Monitoreo Web</h1>
             <p class="lead">Herramientas poderosas para generar informes técnicos y asegurar el rendimiento óptimo.</p>
