--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -119,9 +119,9 @@
     {% include "inc/jumbotron.html" %}
 
 
-
+ 
     <!-- Online Test Box -->
-    <section id="online-test" class="content-section bg-light">
+    <section id="online-test" class="content-section">
         <div class="container text-center">
             <h2>Analyze Your Website Instantly</h2>
             <p>Enter your URL below to get an instant, free report on your site’s performance.</p>
