https token meil fix

--- a/app/templates/email/reset_password.html
+++ b/app/templates/email/reset_password.html
@@ -80,7 +80,8 @@
                                       Para restablecer tu contraseña, visita el siguiente enlace:
                                     </p>
                                     <p class="" style="line-height: 24px; font-size: 16px; width: 100%; margin: 0;" align="left">
-                                      <a href="{{ url_for('reset_password', token=token, _external=True) }}" style="color: #0d6efd;">Restablecer Contraseña</a>
+                                      <!-- {{ url_for('reset_password', token=token, _external=True) }} -->
+                                      <a href="https://moonitor.ciberpunk.es/reset_password/{{token}}" style="color: #0d6efd;">Restablecer Contraseña</a>
                                     </p>
                                     <p class="" style="line-height: 24px; font-size: 16px; width: 100%; margin: 0;" align="left">
                                       El enlace es válido por 10 minutos.
