--- a/app/templates/inc/suscriptions.html
+++ b/app/templates/inc/suscriptions.html
@@ -4,7 +4,7 @@
             <h2>Choose Your Plan</h2>
             <div class="row">
                 <!-- Basic Plan -->
-                <div class="col-md-6">
+                <div class="col-md-6 mb-3">
                     <div class="card pricing-table">
                         <div class="card-header bg-primary text-white">
                             <h5>Basic Plan</h5>
@@ -17,7 +17,7 @@
                     </div>
                 </div>
                 <!-- Pro Plan -->
-                <div class="col-md-6">
+                <div class="col-md-6 mb-3">
                     <div class="card pricing-table">
                         <div class="card-header bg-success text-white">
                             <h5>Pro Plan</h5>
