--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -202,6 +202,10 @@ footer .footer-column a:hover {
 #main-content {
     margin-top: 80px;
 }
+
+.row {
+  margin-right: 0!important;
+}
 </style>
 
 
