--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -179,7 +179,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="domainDnsDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
-              📬 Herramientas
+              🔍 Herramientas
             </a>
             <ul class="dropdown-menu" aria-labelledby="domainDnsDropdown">
               <div class="dropdown-menu-columns">
@@ -291,7 +291,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="domainDnsDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
-              📬 Informes
+              📊 Informes
             </a>
             <ul class="dropdown-menu" aria-labelledby="reportsDropdown">
               <div class="dropdown-menu-columns">
@@ -344,7 +344,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="domainDnsDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
-              📬 Recursos
+              📝 Recursos
             </a>
             <ul class="dropdown-menu" aria-labelledby="resourcesDropdown">
               <div class="dropdown-menu-columns">
@@ -449,14 +449,14 @@
               </ul>
             </span>
             -->
-            <a href="/dashboard" class="btn btn-outline-primary me-2"><span class="item-responsive">Hi {{ current_user.username }}</a>
+            <a href="/dashboard" class="btn btn-outline-primary me-2"><span class="item-responsive">Jau {{ current_user.username }}</a>
             <a class="btn btn-primary me-2 ms-1" href="{{ url_for('edit_subscription') }}"><i class="fa-solid fa-rocket"></i>
-              Mejorar mi cuenta!</a></li>
+              Mejorar!</a></li>
 
             {% else %}
     
             <a class="btn btn-outline-primary me-2 ms-1" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i>
-              Acceder</a>
+              Entrar</a>
     
             <a class="btn btn-primary me-2 ms-1" href="{{ url_for('register') }}"><i class="fa-solid fa-crown"></i>
               Empezar gratis</a></li>
