--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -1,9 +1,10 @@
     <!-- Jumbotron -->
     <header class="jumbotron mb-5">
         <div class="jumbotron-content">
-            <h1 class="display-3">Toma el Control de tu Monitoreo Web</h1>
-            <p class="lead">Herramientas poderosas para generar informes técnicos y asegurar el rendimiento óptimo.</p>
-            <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Empieza Gratis Hoy</a>
+            <h1 class="display-3">Analiza cualquier url en segundos</h1>
+            <p class="lead">Revisa 150 puntos clave de SEO, Usabilidad, Accesibilidad o Seguridad en un mismo sitio.</p>
+            <p class="lead">bten informes detallados desde 9€/mes</p>
+            <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Pruebalo!</a>
         </div>
         <img src="https://via.placeholder.com/600x400" alt="Monitoreo de sitio web">
-    </header>
+    </header> 
