--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -1,10 +1,9 @@
     <!-- Jumbotron -->
     <header class="jumbotron mb-5">
         <div class="jumbotron-content">
-            <h1 class="display-3">Analiza cualquier url en segundos</h1>
-            <p class="lead">Revisa 150 puntos clave de SEO, Usabilidad, Accesibilidad o Seguridad en un mismo sitio.</p>
-            <p class="lead">bten informes detallados desde 9€/mes</p>
-            <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Pruebalo!</a>
+            <h1 class="display-3">Reportes web fáciles en segundos</h1>
+            <p class="lead">Revisa +100 puntos SEO, Usabilidad, Accesibilidad o Seguridad en un mismo sitio. Obten informes detallados por 9€/mes</p>
+            <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Empieza gratis</a>
         </div>
         <img src="https://via.placeholder.com/600x400" alt="Monitoreo de sitio web">
     </header> 
