--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -123,7 +123,9 @@
     <!-- Online Test Box -->
     <section id="online-test" class="content-section">
         <div class="container text-center">
-            <h2>Analyze Your Website Instantly</h2>
+            <h2>Comprueba cualquier sitio</h2>
+            <p class="lead">Revisa +100 puntos SEO, Usabilidad, Accesibilidad o Seguridad en un mismo sitio.</p>
+            
             <p>Enter your URL below to get an instant, free report on your site’s performance.</p>
             <!--
         <form class="row justify-content-center">
@@ -150,7 +152,7 @@
                         aria-hidden="true"></span>
                 </button>-->
                 <button type="submit" class="btn btn-primary" id="analizarBtn">
-                    <span id="btnText">ANALIZAR URL</span>
+                    <span id="btnText">MoOnitorizar!</span>
                     <span id="loadingSpinner" class="spinner-border spinner-border-sm d-none" role="status"
                         aria-hidden="true"></span>
                 </button>
