--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -2,7 +2,8 @@
     <header class="jumbotron mb-5">
         <div class="jumbotron-content">
             <h1 class="display-3">Reportes web fáciles en segundos</h1>
-            <p class="lead">Revisa +100 puntos SEO, Usabilidad, Accesibilidad o Seguridad en un mismo sitio. Obten informes detallados por 9€/mes</p>
+            <p class="lead">Accede a todas las herramientas gratis para siempre y obten informes detallados por 9€/mes</p>
+            
             <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Empieza gratis</a>
         </div>
         <img src="https://via.placeholder.com/600x400" alt="Monitoreo de sitio web">
