--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -1,8 +1,8 @@
     <!-- Jumbotron -->
     <header class="jumbotron mb-5">
         <div class="jumbotron-content">
-            <h1 class="display-3">Reportes web fáciles en segundos</h1>
-            <p class="lead">Accede a todas las herramientas gratis para siempre y obten informes detallados por 9€/mes</p>
+            <h1 class="display-3">Informes de cualquier sitio para técnicos (de cualquier materia)</h1>
+            <p class="lead">Prueba todas las herramientas sin coste y genera informes detallados por 9€/mes</p>
             
             <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Empieza gratis</a>
         </div>
