--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -123,11 +123,12 @@
     <!-- Online Test Box -->
     <section id="online-test" class="content-section">
         <div class="container text-center">
-            <h2>Comprueba cualquier sitio</h2>
-            <p class="lead">Revisa +100 puntos SEO, Usabilidad, Accesibilidad o Seguridad en un mismo sitio.</p>
-            
-            <p>Enter your URL below to get an instant, free report on your site’s performance.</p>
+            <h2>¡Compruebalo!
+            </h2>
+            <p class="lead">Analiza +100 puntos clave en un mismo sitio y en segundos.</p>
             <!--
+            <p>Enter your URL below to get an instant, free report on your site’s performance.</p>
+            
         <form class="row justify-content-center">
             <div class="col-md-6">
                 <input type="url" class="form-control" placeholder="Enter your website URL (e.g., https://yourbusiness.com)" required>
