--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -1,10 +1,10 @@
     <!-- Jumbotron -->
     <header class="jumbotron mb-5">
         <div class="jumbotron-content">
-            <h1 class="display-3">Informesweb para técnicos</h1>
-            <p class="lead">Prueba para siempre sin coste y genera informes detallados por 9€/mes</p>
+            <h1 class="display-3">Informes web para técnicos</h1>
+            <p class="lead">Prueba MoOnitor sin coste y genera informes por 9€/mes</p>
             
-            <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Empieza gratis</a>
+            <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Entra ya!</a>
         </div>
         <img src="https://via.placeholder.com/600x400" alt="Monitoreo de sitio web">
     </header> 
