--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -123,9 +123,9 @@
     <!-- Online Test Box -->
     <section id="online-test" class="content-section">
         <div class="container text-center">
-            <h2>¡Compruebalo!
+            <h2>¡Analiza cualquier sitio!
             </h2>
-            <p class="lead">Analiza +100 puntos clave en un mismo sitio y en segundos.</p>
+            <p class="lead">Revisa +100 puntos clave en un mismo sitio y en segundos.</p>
             <!--
             <p>Enter your URL below to get an instant, free report on your site’s performance.</p>
             
