--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -1,8 +1,8 @@
     <!-- Jumbotron -->
     <header class="jumbotron mb-5">
         <div class="jumbotron-content">
-            <h1 class="display-3">Informes web para técnicos</h1>
-            <p class="lead">Prueba MoOnitor sin coste y genera informes por 9€/mes</p>
+            <h1 class="display-3">Analiza webs en segundos</h1>
+            <p class="lead">Usa MoOnitor sin coste y genera informes por 9€/mes</p>
             
             <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Entra ya!</a>
         </div>
