--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -1,7 +1,7 @@
     <!-- Jumbotron -->
     <header class="jumbotron mb-5">
         <div class="jumbotron-content">
-            <h1 class="display-3">Analis profundos de URLs <b>fácil y rápido</b></h1>
+            <h1 class="display-3">Analisis webs en profundidad <strong>facilmente</strong></h1>
             <p class="lead">Usa MoOnitor <b>sin coste</b> y genera informes por <b>9€/mes</b></p>
             
             <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Entra ya!</a>
