--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -1,8 +1,9 @@
     <!-- Jumbotron -->
     <header class="jumbotron mb-5">
         <div class="jumbotron-content">
-            <h1 class="display-3">Analisis webs en profundidad <strong>facilmente</strong></h1>
-            <p class="lead">Usa MoOnitor <b>sin coste</b> y genera informes por <b>9€/mes</b></p>
+            <h1 class="display-3">Analiza webs en profundidad <strong>facilmente</strong></h1>
+            <p class="lead">Usa MoOnitor <b>sin coste</b> mientras aprendes de SEO, Accesibilidad, Usabilidad, o Seguridad<br/>
+                y genera informes por <b>9€/mes</b></p>
             
             <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Entra ya!</a>
         </div>
