--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -4,6 +4,13 @@
             <h1 class="display-3">Analiza webs en profundidad <strong>facilmente</strong></h1>
             <p class="lead">Usa MoOnitor <b>sin coste</b> y crea informes profesionales por <b>9€/mes</b></p>
             <!--Usa MoOnitor sin coste y genera informes por 9€/mes-->
+            <ul>
+                <li>Revisa +150 puntos clave de 5 ambitos diferentes</li>
+                <li>Ofrece informes a tus clientes en segundos</li>
+                <li>La mejor solución para freelances, agencias y estudios</li>
+                <li>Aprende nuevas técnicas de marketing digital mientras usas la herramienta</li>
+                <li>Analiza tiendas, administraciones, portafolios, cualquier url</li>
+            </ul>
             <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Entra ya!</a>
         </div>
         <img src="https://via.placeholder.com/600x400" alt="Monitoreo de sitio web">
