--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -2,14 +2,20 @@
     <header class="jumbotron mb-5">
          <div class="jumbotron-content">
             <h1 class="display-3">Analiza webs en profundidad <strong>facilmente</strong></h1>
-            <p class="lead">Usa MoOnitor <b>sin coste</b> y crea informes profesionales por <b>9€/mes</b></p>
+            <p class="lead">Usa MoOnitor <b>sin coste</b> y crea informes profesionales por <b>6€/mes</b></p>
             <!--Usa MoOnitor sin coste y genera informes por 9€/mes-->
             <ul>
-                <li>Revisa +150 puntos clave de 5 ambitos diferentes</li>
-                <li>Ofrece informes a tus clientes en segundos</li>
-                <li>La mejor solución para freelances, agencias y estudios</li>
+                <li>Detecta +150 problemas web en una misma herramienta</li>
+                <li>Crea informes detallados para ti o tus clientes en segundos</li>
+                <li>Genera informes clave de tus url para tus clientes</li>
                 <li>Aprende nuevas técnicas de marketing digital mientras usas la herramienta</li>
-                <li>Analiza tiendas, administraciones, portafolios, cualquier url</li>
+                <!-- 
+                Revisa +150 puntos clave de 5 ambitos diferentes
+                Ofrece informes a tus clientes en segundos
+                La mejor solución para freelances, agencias y estudios
+                Aprende nuevas técnicas de marketing digital mientras usas la herramienta
+                Analiza tiendas, administraciones, portafolios, cualquier url
+                -->
             </ul>
             <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Entra ya!</a>
         </div>
