--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -17,8 +17,9 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-image: url('https://ciberpunk.es/wp-content/uploads/2020/12/finance4-section-bg2.png');
+  background-repeat: repeat-x;
 }
-
 .container-fluid {
   flex: 1;
 }
