--- a/app/templates/inc/featurettes.html
+++ b/app/templates/inc/featurettes.html
@@ -4,7 +4,7 @@
     <div class="container my-5">
         <div class="row featurette">
             <div class="col-md-6 mb-3">
-                <img src="https://via.placeholder.com/500" alt="Feature 1" class="img-fluid rounded">
+                <img src="https://ciberpunk.es/wp-content/uploads/2020/11/finance4-features-pic3.png" alt="Feature 1" class="img-fluid rounded">
             </div>
             <div class="col-md-6 mb-3">
                 <h2>Real-Time Monitoring</h2>
@@ -24,7 +24,7 @@
         </div>
         <div class="row featurette">
             <div class="col-md-6 order-md-2 mb-3">
-                <img src="https://via.placeholder.com/500" alt="Feature 2" class="img-fluid rounded">
+                <img src="https://ciberpunk.es/wp-content/uploads/2020/11/finance4-how-pic1.png" alt="Feature 2" class="img-fluid rounded">
             </div>
             <div class="col-md-6 order-md-1 mb-3">
                 <h2>Comprehensive Reporting</h2>
@@ -60,7 +60,7 @@
         </div>
             <div class="row featurette">
             <div class="col-md-6 mb-3">
-                <img src="https://via.placeholder.com/500" alt="Feature 3" class="img-fluid rounded">
+                <img src="https://ciberpunk.es/wp-content/uploads/2020/11/finance4-how-pic2.png" alt="Feature 3" class="img-fluid rounded">
             </div>
             <div class="col-md-6 mb-3">
                 <h2>Customizable Dashboards</h2>
