--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -19,6 +19,6 @@
             </ul>
             <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Entra ya!</a>
         </div>
-        <img src="https://via.placeholder.com/600x400" alt="Monitoreo de sitio web">
+        <img src="https://ciberpunk.es/wp-content/uploads/2020/11/finance4-slider-pic1.png" alt="Monitoreo de sitio web">
        
     </header> 
