--- a/app/templates/inc/features.html
+++ b/app/templates/inc/features.html
@@ -1,6 +1,6 @@
     <!-- Features Overview -->
-    <section class="features-overview">
-        <div class="container">
+    <section class="container my-5">
+        <div class="features-overview ">
             <h2 class="text-center mb-5">Features Overview</h2>
             <div class="accordion" id="featuresAccordion">
                 <div class="accordion-item">
