--- a/app/templates/inc/suscriptions.html
+++ b/app/templates/inc/suscriptions.html
@@ -1,6 +1,6 @@
     <!-- Pricing -->
-    <section id="pricing" class="pricing-section">
-        <div class="container text-center">
+    <section id="pricing" class="container my-5">
+        <div class="pricing-section text-center">
             <h2>Choose Your Plan</h2>
             <div class="row">
                 <!-- Basic Plan -->
