--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -13,15 +13,21 @@
         }
 
           /* Jumbotron Full Page */
-        .jumbotron {
+          .jumbotron {
             /* height: 100vh; */
             display: flex;
             align-items: center;
             justify-content: space-between;
             padding: 2rem;
             color: white;
-            background: linear-gradient(135deg, #6610f2, #6f42c1);
+            background: 
+                linear-gradient(135deg, rgba(102, 16, 242, 0.8), rgba(111, 66, 193, 0.8)), 
+                url('https://ciberpunk.es/wp-content/uploads/2020/12/finance4-section-bg2.png');
+            background-size: cover; 
+            background-position: center; 
+            background-blend-mode: overlay; 
         }
+        
 
         .jumbotron-content {
             max-width: 50%;
